--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,9 @@
 name: Chat-Minigames
 version: '${project.version}'
-main: me.aroze.chatminigames.chatminigames
+main: me.aroze.chatminigames.ChatMinigames
 api-version: 1.18
 authors: [ Aroze ]
 description: A lightweight, open-sourced and customizable plugin for chat minigames
 website: aroze.me
+commands:
+  startchatgame: {}
