--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,5 +10,6 @@
 
 ########################################################################################################################
 
-# The message that will appear if a player tries to force start or use any other commands associated with ChatMinigames, if they do not have permission.
-permissionMessage: "&#ff6e6e⚠ &#ff7f6eYou aren't allowed to do this! smh!"
+messages:
+  # The message that will appear if a player tries to force start or use any other commands associated with ChatMinigames, if they do not have permission
+  no-permission: "&#ff6e6e⚠ &#ff7f6eYou aren't allowed to do this! smh!"
