--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -16,3 +16,6 @@ messages:
 
   # The message that will appear if a player attempts to force start a game without specifying one:
     no-game-specified: "&#ff6e6e⚠ &#ff7f6eSyntax: /forcestart <Random | Scramble | Rush | Math>"
+
+  # The message that will appear if a player attempts to force start a game that does not exist:
+    invalid-game: "&#ff6e6e⚠ &#ff7f6eThat game doesn't exist, dummy!"
