--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -19,3 +19,6 @@ messages:
 
   # The message that will appear if a player attempts to force start a game that does not exist:
     invalid-game: "&#ff6e6e⚠ &#ff7f6eThat game doesn't exist, dummy!"
+
+  # The message that will appear if a player enters too many args while force starting:
+    too-many-args: "&#ff6e6e⚠ &#ff7f6eThat's too many args weirdo."
