--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,6 +9,16 @@
 # Mineraft colours, example: "Woah &cRed&r!!!"
 # Hex codes, example: "Woah, a &#ff6e6eFancier Red&r!!"
 
+#
+# Placeholders:
+#
+# For game start broadcasts:
+# {mathNumber1} : the first number in a math equation (specific to Math games).
+# {mathNumber2} : the second number in a math equation (specific to Math games).
+# {mathAnswer} : the answer to a math equation (specific to Math games).
+# {mathOperator} : the operator in a math equation (specific to Math games).
+#
+
 ########################################################################################################################
 
 messages:
@@ -23,3 +33,12 @@ messages:
 
   # The message that will appear if a player enters too many args while force starting:
     too-many-args: "&#ff6e6e⚠ &#ff7f6eThat's too many args weirdo."
+
+  # The broadcast that will appear when a Math game starts:
+    game-start-math:
+      "&7&m                            \n
+      &#ffb3a6&lMinigame! &#734841| &#ffb3a6Math\n
+      \n
+      &#ffb3a6>Correctly answer this the fastest to gain &#ff8787100 coins!\n
+      &#ffb3a6>Equation: &#ff8787{mathNum1}{mathOperation}{mathNum2}\n
+      &7&m                            "
