--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -39,6 +39,6 @@ messages:
       "&7&m                            \n
       &#ffb3a6&lMinigame! &#734841| &#ffb3a6Math\n
       \n
-      &#ffb3a6>Correctly answer this the fastest to gain &#ff8787100 coins!\n
-      &#ffb3a6>Equation: &#ff8787{mathNum1}{mathOperation}{mathNum2}\n
+      &#ffb3a6Correctly answer this the fastest to gain &#ff8787100 coins!\n
+      &#ffb3a6Equation: &#ff8787{mathNum1}{mathOperation}{mathNum2}\n
       &7&m                            "
