Changed config formatting

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -36,9 +36,9 @@ messages:
 
   # The broadcast that will appear when a Math game starts:
     game-start-math:
-      "&7&m                            \n
-      &#ffb3a6&lMinigame! &#734841| &#ffb3a6Math\n
-      \n
-      &#ffb3a6Correctly answer this the fastest to gain &#ff8787100 coins!\n
-      &#ffb3a6Equation: &#ff8787{mathNum1}{mathOperation}{mathNum2}\n
-      &7&m                            "
+      - "&7&m                            "
+      - "&#ffb3a6&lMinigame! &#734841| &#ffb3a6Math"
+      - ""
+      - "&#ffb3a6Correctly answer this the fastest to gain &#ff8787100 coins!"
+      - "&#ffb3a6Equation: &#ff8787{mathNum1}{mathOperation}{mathNum2}"
+      - "&7&m                            "
