--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -23,7 +23,7 @@
 
 ########################################################################################################################
 
-# This list will be used for both unscramble and rush. Separate each word with a comma:
+# This list will be used for both unscramble and rush. Separate each word with a comma and space:
   wordList: 'Nerd, Broadcast, Swallow, Marriage, Bathtub, Couple, Knowledge, Transparent, Journal, Greeting, Attractive, Pillow, Hypothesis, Legend, Mommy, Daddy, Brother, Sister, Confession, Suck, Swallow, Vomit, Choke, Defenestration, Duvet, Baguette, Cucumber, Generator, Multiplier, Prestige, Photosynthesis, Character, Competitive, Unique, Stick, Fishing, Eggplant, Immortal, Bedrock, Obsidian, Iron, Diamond, Emerald, Villager, Conclusiveness, Discombobulated, Improvement, Extension, Compartment, Treat, Invasion, Raid, Summer, Winter, Ceiling, Floor'
 
 rewards:
