--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -89,6 +89,8 @@ rewards:
     math: 'addcoins {player} 100'
   # The command to execute when a player correctly types a rush word
     rush: 'addcoins {player} 100'
+  # The command to execute when a player correctly unscrambles a word.
+    unscramble: 'addcoins {player} 100'
 
 
 messages:
@@ -136,7 +138,7 @@ messages:
     no-permission: "&#ff6e6e⚠ &#ff7f6eYou aren't allowed to do this! smh!"
 
   # Message to be sent if a player attempts to force start a game without specifying one:
-    no-game-specified: "&#ff6e6e⚠ &#ff7f6eSyntax: /forcestart <Random | Scramble | Rush | Math>"
+    no-game-specified: "&#ff6e6e⚠ &#ff7f6eSyntax: /forcestart <Random | Unscramble | Rush | Math>"
 
   # Message to be sent if a player attempts to force start a game that does not exist:
     invalid-game: "&#ff6e6e⚠ &#ff7f6eThat game doesn't exist, dummy!"
