--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,4 +6,5 @@ authors: [ Aroze ]
 description: A lightweight, open-sourced and customizable plugin for chat minigames
 website: aroze.me
 commands:
-  startchatgame: {}
+  startchatgame:
+    aliases: [ forcestartchatgame ]
