--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -156,6 +156,8 @@ messages:
     invalid-game: "&#ff6e6e⚠ &#ff7f6eThat game doesn't exist, dummy!"
   # Message to be sent if a player enters too many args while force starting:
     too-many-args: "&#ff6e6e⚠ &#ff7f6eThat's too many args weirdo."
+  # Message to be sent if a player enters /cmg
+    info-command: "&#ff6e6e⚠ &#ff7f6eSyntax: /cmg <forcestart | reload>"
 
 misc:
   # Should a noteblock pling (minecraft:block.note_block.pling) play to players who correctly complete a minigame?
