--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -158,6 +158,8 @@ messages:
     too-many-args: "&#ff6e6e⚠ &#ff7f6eThat's too many args weirdo."
   # Message to be sent if a player enters just "/cmg"
     info: "&#ff6e6e⚠ &#ff7f6eSyntax: /cmg <forcestart | reload>"
+  # Message to be sent on config reload
+    reload: "&#ff6e6e✔ &#ff7f6eChatMinigames: Config reloaded!"
 
 misc:
   # Should a noteblock pling (minecraft:block.note_block.pling) play to players who correctly complete a minigame?
