--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.aroze</groupId>
     <artifactId>ChatMinigames</artifactId>
-    <version>1.0</version>
+    <version>1.1.0</version>
     <packaging>jar</packaging>
 
     <name>Chat-Minigames</name>
@@ -19,7 +19,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
-    <url>aroze.me</url>
+    <url>https://github.com/UwUAroze/ChatMinigames</url>
 
     <build>
         <finalName>Chat-Minigames</finalName>
