--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -191,3 +191,6 @@ misc:
 
   # Should messages be cancelled if a player correctly answers?
     cancel-messages: true
+
+  # Should cancelled messages be ignored?
+    ignore-cancelled-messages: true
